tetris/base/tetris-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris-canary
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: tetris
