tetris/base/tetris-root.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris-root
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: tetris
