tetris/base/tetris-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris-stable
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: tetris
